# searching-for-techdebt

./: CITATION.bib  README.md  Vagrantfile  pyproject.toml
data/input/: gaf_issues.csv
data/manual/: .mailmap  .mailmap_gaffer
data/output/: cas_version_stats.csv  cas_version_stats_tab.csv  cas_version_stats_tab.tex  gaf_version_stats.csv  gaf_version_stats_tab.csv  gaf_version_stats_tab.tex
data/processing/: cas_contribcompl_highest.md  cas_t_lead_longest.md  cassandra-0.3.0-final_pkgs.txt  cassandra-0.4.2_pkgs.txt  cassandra-0.5.1_pkgs.txt  cassandra-0.6.0_pkgs.txt  cassandra-0.6.4_pkgs.txt  cassandra-0.7.0_pkgs.txt  cassandra-0.7.2_pkgs.txt  cassandra-0.8.0_pkgs.txt  cassandra-0.8.9_pkgs.txt  cassandra-1.0.8_pkgs.txt  cassandra-1.1.0_pkgs.txt  cassandra-1.2.0_pkgs.txt  cassandra-1.2.17_pkgs.txt  cassandra-1.2.5_pkgs.txt  cassandra-1.2.6_pkgs.txt  cassandra-2.0.10_pkgs.txt  cassandra-2.0.13_pkgs.txt  cassandra-2.0.1_pkgs.txt  cassandra-2.0.2_pkgs.txt  cassandra-2.0.5_pkgs.txt  cassandra-2.1.0_pkgs.txt  cassandra-2.1.21_pkgs.txt  cassandra-2.1.6_pkgs.txt  cassandra-2.2.10_pkgs.txt  cassandra-2.2.11_pkgs.txt  cassandra-2.2.14_pkgs.txt  cassandra-2.2.15_pkgs.txt  cassandra-2.2.16_pkgs.txt  cassandra-2.2.18_pkgs.txt  cassandra-2.2.19_pkgs.txt  cassandra-3.0.17_pkgs.txt  cassandra-3.0.18_pkgs.txt  cassandra-3.0.19_pkgs.txt  (+347 more)
experiment/: run_it.sh
notebooks/: Manual Search Protocol.ipynb
searching_for_td/: analyze.py  collect_release_dates_from_gh.py  collect_version_stats.py  convert_version_stats_to_tables.py  jira_to_csv.py  preprocess_data.py  utils.py
